CheckIn: Fix Bugzilla bug 132950 Support multi nodes can be inserted into the column mapping in one time
Fix Bugzilla bug 182027 BIRT Designer  - Enhancements to XML dataset editor UI

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -16,21 +16,29 @@ wizard.title.newDataSet=New Data Set
 wizard.title.selectXmlFile=Select XML Data for Preview
 wizard.defaultMessage.selectFile=Select a sample XML source to enable data preview in this session.
 wizard.title.xPathChoose=Define Table Mapping
-wizard.defaultMessage.selectXPath=Define the element to be used as a table by selecting the element in XML structure and adding it to Table Mapping. There can only be one table mapping per XML data set.
+wizard.defaultMessage.selectXPath=Define data set row mapping by selecting an element from the XML structure.\nEach occurrence of the selected XML element in the XML document is mapped to a data set row.
 wizard.title.selectColumn=Define Column Mapping
-wizard.title.defineColumnMapping=Define column mapping by selecting an element or attribute in XML Structure and adding it to Column Mapping. 
+wizard.title.defineColumnMapping=Create data set columns by selecting and adding items from the XML structure.\nEach added XML element or attribute is mapped to a data set column. 
 
 #preference
 designer.preview.preference.numberOfElementPassedToGetSchema=Number of elements accessed in XML Schema tree parsing.
 designer.preview.preference.numberOfElementPassedToGetSchema.errormessage=Please enter a number between 0 and {0}.
 designer.preview.preference.columnMappingPage.group.title=Column Mapping Page
 
-#table mapping page messages
-xPathChoosePage.messages.rowMapping=Table Mapping
+#row mapping page messages
+xPathChoosePage.messages.elementSelection.label=XML Element Selection
+xPathChoosePage.messages.elementSelection.item.absolutePath=XML elements named "{0}" at fixed absolute path\n( {1} )\n
+xPathChoosePage.messages.elementSelection.item.anyLocation=XML elements named "{0}" at any location\n( {1} )\n
+xPathChoosePage.messages.elementSelection.disable.absolutePath=XML elements at fixed absolute path\n 
+xPathChoosePage.messages.elementSelection.disable.anyLocation=XML elements at any location\n 
+xPathChoosePage.messages.elementSelection.item.custom=C&ustom XPath Expression
 xPathChoosePage.messages.xPathExpression=&XPath Expression
 xPathChoosePage.messages.xmlStructure=XML Structure
 xPathChoosePage.messages.xmlColumnMapping=Column Mapping
 xPathChoosePage.messages.xpathChange=Make sure the changed table mapping is compatible with the column mapping if applicable   
+xPathChoosePage.FileNameIcon=File Name Icon
+xPathChoosePage.XMLElementIcon=XML Element Icon
+xPathChoosePage.ColumnIcon=Column Icon
 
 #sample xml data file page messages
 xmlDataSetSelectionPage.messages.lineofdata=lines of source data
@@ -40,20 +48,30 @@ xmlDataSetSelectionPage.warning.errorReadXMLFile=Error reading XML data from fil
 button.refresh=Refresh
 menu.menuItem.removeAll=Remove All
 menu.menuItem.remove=Remove
+menu.button.edit=&Edit...
+menu.button.remove=&Remove
+menu.button.up=&Up
+menu.button.down=&Down
+menu.button.preview=&Show Sample Data
 lable.selectXmlFile=Enter the URL of the &XML source or browse to the file containing the data:
 label.selectEncoding=Select &encoding for the XML source and schema specified above:
 lable.selectXmlSchmaFile=Enter the URL of the X&ML schema or browse to the file containing the\n schema. Leave this empty if no schema is available:
 label.preview=&Preview first
-label.useXMLFileFromDataSource=Use the XML file defined in data source
+label.useXMLFileFromDataSource=&Use the XML file defined in data source
 RowMappingDialog.title=Select or edit the XPath expression.
 RowMappingDialog.info=Select one of the predefined XPath expressions for the node you selected or\n enter another expression:
-ColumnMappingDialog.info.columnName=Column Name:
-ColumnMappingDialog.info.xPath=XPath Expression:
-ColumnMappingDialog.info.dataType=Data Type:
-ColumnMappingDialog.info.dataPreview=Table Preview
-ColumnMappingDialog.prompt.new=New Mapping here...
+ColumnMappingPage.AddSingleButton.tooltip=Use the selected node as column mapping
+ColumnMappingPage.AddAllButton.tooltip=Use all the children columns of the selected node as column mapping
+ColumnMappingTable.upButton.tooltip=Move column mapping Up
+ColumnMappingTable.downButton.tooltip=Move column mapping Down
+ColumnMappingTable.removeButton.tooltip=Remove column mapping
+ColumnMappingTable.editButton.tooltip=Edit column mapping
+ColumnMappingTable.previewButton.tooltip=Preview the sample XML data 
+ColumnMappingDialog.info.columnName=&Column Name:
+ColumnMappingDialog.info.xPath=&XPath Expression:
+ColumnMappingDialog.info.dataType=&Data Type:
 ColumnMappingDialog.prompt.maxRow=The source data is more than 500 lines. Only the first 500 lines can be previewed in this page.
-ColumnMappingDialog.prompt.dialog.title=Result Preview
+XMLDataPreviewDialog.title=Sample XML Data
 
 dataset.editor.columnName=Name
 dataset.editor.xpathexpression=XPath
@@ -65,7 +83,13 @@ error.label=Error
 error.selectFolder=The selected file URL is invalid or the file doesn't exist.
 error.emptyPath=The file URL is empty.
 error.xpath.canNotContainAttribute=The XPath expression cannot map to an XML attribute.
+error.xpath.getPathList=Error occurred when getting the XPath list by the selected XML tree item.
 error.dataset.maxRowNumberError=The max row should be a non-negative number.
+error.columnMapping.createPage=Error occurred in column mapping page. 
+error.columnMapping.columnElement.create=Error occurred when mapping a column mapping element.
+error.columnMapping.columnElement.edit=Error occurred when editing the mapping column element.
+error.columnMapping.ATreeNode.getChildren=Error occurs when fetching the children nodes of the selected XML element.
+error.columnMapping.SelectedTreeItem.notNull=No tree item is selected to create column mapping element. Please select one or more.
 error.columnMapping.noMappingColumn=Please map at least one column.
 error.columnMapping.tableMappingXPathNotExist=The table mapping XPath does not exist.
 error.file.null=All the URLs are empty, it means you haven't select any data source. Are you sure you want to keep it?
