BZ202591 SQLBuilder integration with sqleditor. Invoke SQLBuilder DML Dialog from the sqleditor via the editor.core's default UIComponentService.

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -32,6 +32,9 @@ ExecuteSQLAction_tooltip=Execute All SQL Statements
 ExecuteSelectionSQLAction_label=E&xecute Selected Text
 ExecuteSelectionSQLAction_tooltip=Execute Selected SQL Statements
 
+DMLDialogSelectionSQLAction_label=Edit in S&QL Query Builder...
+DMLDialogSelectionSQLAction_tooltip=Edit Selected SQL Statements in SQL Query Builder
+
 RunAction_label=&Run...
 RunAction_tooltip=Run
 
