BZ 202589 Allow the user to Change Statement Type in the SQB. To do this, a new menu option has been added to the Source View and to the SQLTreeViewer (which is in the OutlineView when the SQB is running as an editor).

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -53,6 +53,9 @@ _UI_ACTION_ADD_TABLE_REPLACE  = R&eplace Table...
 _UI_ACTION_ADD_FULLSELECT     = Add &FULLSELECT Statement
 _UI_ACTION_REMOVE_TABLE       = Re&move Table...
 
+!actions/ChangeStatementTypeAction
+_UI_ACTION_CHANGE_STATEMENT_TYPE		= &Change Statement Type...
+
 !actions/OmitCurrentSchemaAction
 _UI_ACTION_OMIT_CURRENT_SCHEMA		= &Omit Current Schema...
 
@@ -285,6 +288,11 @@ _UI_PREFERENCES_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL stateme
 _UI_PREFERENCES_OMIT_SCHEMA_SPECIFY_SCHEMA_GROUP_TITLE=Current schema
 _UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Authorization ID
 _UI_PREFERENCES_OMIT_SCHEMA_SCHEMA_NAME=&Schema name:
+
+!dialogs/ChangeStatementTypeDialog
+_UI_DIALOG_CHANGE_STATEMENT_TYPE_TITLE=Change SQL Statement Type
+_UI_DIALOG_CHANGE_STATEMENT_TYPE_NOTE=Changing the SQL Statement Type will cause the current statement to be replaced by a new empty statement.
+_UI_DIALOG_CHANGE_STATEMENT_TYPE_GROUP_TITLE=Statement type
 
 !dialogs/OmitCurrentSchemaDialog
 _UI_DIALOG_OMIT_SCHEMA_TITLE=Omit Current Schema
@@ -631,6 +639,8 @@ datatools_sqlbuilder_sqlbuilder_unsupport_VE = Visual Explain is not supported o
 _UI_CLEAR_TO_TEMPLATE 			     = Clear to Template
 _UI_REVERT_TO_LAST_CORRECT_SOURCE    = Revert to Last Correct Source
 _UI_LAST_CORRECT_SOURCE 			 = Last correct source?
+!Change Statement Type
+_UI_CHANGE_STATEMENT_TYPE			= Change Statement Type...
 !Omit Current Schema
 _UI_OMIT_CURRENT_SCHEMA              = Omit Current Schema... 
 
@@ -762,6 +772,11 @@ datatools_sqlbuilder_RevertToDefaultAction_label       = Clear to Template
 datatools_sqlbuilder_RevertToDefaultAction_tooltip     =
 datatools_sqlbuilder_RevertToDefaultAction_image       =
 datatools_sqlbuilder_RevertToDefaultAction_description =
+
+datatools_sqlbuilder_ChangeStatementTypeAction_label   = Change Statement Type...
+datatools_sqlbuilder_ChangeStatementTypeAction_tooltip     =
+datatools_sqlbuilder_ChangeStatementTypeAction_image       =
+datatools_sqlbuilder_ChangeStatementTypeAction_description =
 
 datatools_sqlbuilder_OmitCurrentSchemaAction_label       = Omit Current Schema...
 datatools_sqlbuilder_OmitCurrentSchemaAction_tooltip     =
