--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2001, 2004 IBM Corporation and others.
+# Copyright (c) 2001, 2004, 2008 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -82,6 +82,11 @@ DATATOOLS.CORE.UI.DND.LINK = Link
 #
 DATATOOLS.CORE.UI.QUICKFIX.ADD_DANGLING = Add Dangling Reference to Model
 DATATOOLS.CORE.UI.QUICKFIX.REMOVE_DANGLING = Remove Dangling Reference from Model
+
+#
+## FE Action
+#
+GENERATE_DDL_MENU_TEXT = Generate DDL...
 
 #
 ## FE and RE Wizards
