BZ 202589, 209893, 209894 202589: Make SQLBuilder use CustomSashForm with buttons to hide and restore the panes. 209893, 209894 Incorporate Actuate's contribution for saving SQLBuilder WindowState and EditorInputOptions

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -282,6 +282,11 @@ _UI_RADIO_SCRATCH_SELECT=Create an original &subquery
 _UI_LABEL_EXISTING_SELECT=C&reate or edit a SELECT statement:
 _UI_LABEL_NEW_SELECT_INFO=&Type a SELECT statement. You can specify a virtual table.
 
+!views/CustomSashForm.java
+_UI_TOOLTIP_RESTORE_PANE=Restore Pane
+_UI_TOOLTIP_HIDE_PANE=Hide Pane
+
+
 !preferences/SQLBuilderPreferencePage.java
 _UI_PREFERENCES_OMIT_SCHEMA_DESC=Default values for the Omit Current Schema settings associated with SQL statements
 _UI_PREFERENCES_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
