[216514] Applied fixs to o.e.d.sqltools.data.core and o.e.d.sqltools.data.ui to prompt for confirm of deleting rows and fix for color of changed field.

--- a/plugins/org.eclipse.datatools.sqltools.data.ui/src/org/eclipse/datatools/sqltools/data/internal/ui/editor/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.data.ui/src/org/eclipse/datatools/sqltools/data/internal/ui/editor/messages.properties
@@ -16,6 +16,8 @@ TableDataLabelProvider.null=<null>
 TableDataLabelProvider.error=<error>
 TableDataEditor.ErrorWhileSaving=Error while saving
 TableDataEditor.ErrorRefreshing=Error refreshing
+TableDataEditor.RemoveRowsConfirmation.title = Delete Rows
+TableDataEditor.RemoveRowsConfirmation.message = One or more rows from {0} will be removed. Do you want to continue?
 TableDataLabelProvider.newRow=<new row>
 TableDataCellModifier.ErrorUpdatingData=Error updating data
 TableDataCellModifier.dataFormatError=The data entered does not conform to the data type of the column
