[218862]  Found 1 single quote in text handled by Java MessageFormat class

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/l10n/GenericCatalog.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/l10n/GenericCatalog.properties
@@ -1,7 +1,7 @@
 # NLS_MESSAGEFORMAT_VAR          needed to handle quotes correctly
 #
 #/*******************************************************************************
-# * Copyright (c) 2007 IBM Corporation and others.
+# * Copyright (c) 2007, 2008 IBM Corporation and others.
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -15,6 +15,6 @@
 FE_VIEW_HAS_NO_BODY = The view {0} has no SELECT statement
 FE_TRIGGER_ACTION_EMPTY = The trigger {0} action is empty
 FE_PARENT_TABLLE_OR_KEY_DO_NOT_EXIST = The parent table/key referenced by foreign key {0} does not exist
-FE_REFERENCE_CONSTAINT_HAS_NO_KEY = The refernece constraint {0} doesn't have any key
-FE_INDEX_HAS_NO_MEMBER = The index {0} doesn't have any member
-FE_ELEMENT_HAS_NO_TYPE = The typed element {0} doesn't have any type
+FE_REFERENCE_CONSTAINT_HAS_NO_KEY = The refernece constraint {0} does not have any key
+FE_INDEX_HAS_NO_MEMBER = The index {0} does not have any member
+FE_ELEMENT_HAS_NO_TYPE = The typed element {0} does not have any type
