201133: External Discouraged Access warnings in o.e.d.sqltools.routineeditor

--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
@@ -27,3 +27,10 @@ SQLEditor_profile_information=Connection Profile Information
 Editor_error_save_message=Save could not be completed. {0}
 Editor_error_save_title=Problems During Save As...
 Editor_warning_save_delete=The original file ''{0}'' has been deleted.
+
+###############################
+#Copied from LaunchConfigurationsMessages
+###############################
+SaveScopeResourcesHandler_2=Select resources to save:
+SaveScopeResourcesHandler_3=Save and Launch
+SaveScopeResourcesHandler_1=Always save &resources before launching
