201129: External Discouraged Access warnings in o.e.d.sqltools.common.ui

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/internal/messages.properties
@@ -9,3 +9,17 @@ SaveAsDialog_title=Save As
 SaveAsDialog_message=Save as a SQL file
 SaveAsDialog_error=Error
 SaveAsDialog_error_msg=Error occurs when trying to save the scripts as a file
+
+#######################################
+#Copied from IDEWorkbenchMessages
+#######################################
+SaveAsDialog_text = Save As
+SaveAsDialog_file = file
+SaveAsDialog_closedProjectMessage = The selected project is closed.
+# ==============================================================================
+# Dialogs: Copied from IDEWorkbenchMessages
+# ==============================================================================
+Question = Question
+Always = &Always
+Never = &Never
+Prompt = &Prompt
