--- a/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/resource/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/ui/resource/messages.properties
@@ -32,3 +32,8 @@ CreateFolderAction_text = Create F&older...
 CreateFolderAction_toolTip = Create New Folder
 CreateFolderAction_title = New
 
+####################################
+# Copied from IDEWorkbenchMessages
+####################################
+ContainerGroup_message = &Enter or select the parent folder:
+ContainerGroup_selectFolder = Select the folder:
