--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -63,6 +63,7 @@ DriverValidator.msg.missing_required_property = Required property in driver defi
 DriverValidator.msg.jarfile_not_found = Unable to locate JAR/zip in file system as specified by the driver definition: {0}.
 DriverInstance.error.invalidClassPath=Invalid driver class path.
 DriverValidator.msg.empty_jar_list = Driver files not specified in driver definition.
+DriverValidator.msg.empty_name = A driver name must not be an empty string.
 
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
 DriverInstance.error.jarListNotDefined=Invalid driver definition; JAR list not defined.
