[213266]  Need Option to open a Profile's contributed PropertyPage in Read-Only Mode

--- a/plugins/org.eclipse.datatools.enablement.hsqldb.ui/src/org/eclipse/datatools/enablement/hsqldb/ui/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb.ui/src/org/eclipse/datatools/enablement/hsqldb/ui/messages.properties
@@ -19,5 +19,17 @@ HSQLDBProfileDetailsWizardPage.summary.connProps.label = Connection properties
 HSQLDBProfileDetailsWizardPage.summary.userName.label = User name
 HSQLDBProfileDetailsWizardPage.summary.password.label = Password
 HSQLDBProfileDetailsWizardPage.summary.url.label = URL
+HSQLDBProfileDetailsWizardPage.summary.database.label = Database
+HSQLDBProfileDetailsWizardPage.summary.true = true
+HSQLDBProfileDetailsWizardPage.summary.false = false
+HSQLDBProfileDetailsWizardPage.summary.databaselocation.label = Database location
+HSQLDBProfileDetailsWizardPage.summary.persistpassword.label = Save password
 HSQLDBProfileDetailsWizardPage.FileDialog.title.filebrowse = Browse for Database Folder
 HSQLDBProfileDetailsWizardPage.FileDialog.msg.filebrowse = Select the folder that corresponds to your HSQLDB database.
+HSQLDBProfileDetailsWizardPage.general.tab = General
+HSQLDBProfileDetailsWizardPage.optional.tab = Optional
+HSQLDBProfileDetailsWizardPage.database.validation.message = Enter a database name.
+HSQLDBProfileDetailsWizardPage.databaselocation.validation.message = Enter a database location.
+
+
+
