--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -1,6 +1,6 @@
 #
 #************************************************************************
-# Copyright (c) 2006, 2007 Actuate Corporation.
+# Copyright (c) 2006, 2008 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -23,6 +23,7 @@ wizard_dataSource_defaultTitle=New Data Source
 wizard_missingDataSourceId=Missing ODA Data Source ID in the Connection Profile attribute.
 wizard_invalidManifest=Invalid plug-in manifest content in the oda.design.ui.dataSource extension.
 page_defaultDataSourceTitle=Custom Data Source Properties
+designSession_flushFailed=Unable to flush the current data set design session.
 designSession_invalidArgument=Invalid argument specified in design session method.
 designSession_invalidEditApiCall=Invalid design session API call for editing a design.
 designSession_invalidNewDesignApiCall=Invalid design session API call for creating a new design.
