DTP 1.6 ljulien - 2008 03 13 - https://bugs.eclipse.org/bugs/show_bug.cgi?id=218552

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -208,3 +208,25 @@ _UI_MESSAGE_SELECTION_REQUIRED = Please select at least one item.
 _UI_SP_FILTER_PAGE_TITLE = Stored Procedure Filter Properties
 _UI_TABLE_FILTER_PAGE_TITLE = Table Filter Properties
 _UI_SCHEMA_FILTER_PAGE_TITLE = Schema Filter Properties
+
+#
+## Actions for Schema Management
+#
+SCHEMA_MANAGEMENT_CREATE_SCHEMA = Schema
+SCHEMA_MANAGEMENT_CREATE_TABLE = Table
+SCHEMA_MANAGEMENT_CREATE_VIEW = View
+SCHEMA_MANAGEMENT_CREATE_INDEX = Index
+SCHEMA_MANAGEMENT_CREATE_BUFFER_POOL = Buffer Pool
+SCHEMA_MANAGEMENT_CREATE_PARTITION_GROUP = Partition Group
+SCHEMA_MANAGEMENT_CREATE_DISTINCT_TYPE = Distinct User-Defined Type
+SCHEMA_MANAGEMENT_CREATE_STRUCTURED_TYPE = Structured User-Defined Type
+SCHEMA_MANAGEMENT_CREATE_SEQUENCE = Sequence
+SCHEMA_MANAGEMENT_CREATE_MQT = MQT
+SCHEMA_MANAGEMENT_CREATE_ALIAS = Alias
+SCHEMA_MANAGEMENT_CREATE_TRIGGER = Trigger
+SCHEMA_MANAGEMENT_CREATE_ROLE = Role
+#
+SCHEMA_MANAGEMENT_ADD_COLUMN = Column
+SCHEMA_MANAGEMENT_ADD_CHECK_CONSTRAINT = Check Constraint
+SCHEMA_MANAGEMENT_ADD_UNIQUE_CONSTRAINT = Unique Constraint
+SCHEMA_MANAGEMENT_ADD_FOREIGN_KEY = Foreign Key
