--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -1,6 +1,6 @@
 # NLS_MESSAGEFORMAT_VAR          needed to handle quotes correctly
 #
-# Copyright © 2002, 2007. All Rights Reserved IBM Corporation and others.
+# Copyright (c) 2002, 2007. All Rights Reserved IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which is available at
