BZ 222696 Patch from Linda Chan: Refactor SQLBuilderDialog in sqlbuilder plugin so it can be subclassed and have the SQLBuilder input classes passed to it, as well as take the input from the SQLEditor when invoked via SQLBuilderUIComponentService.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -742,8 +742,11 @@ _UI_VIEWS_GRAPH_DESELECT_ALL_COLUMN = Deselect All Columns
 
 !SQLQueryBuilder Dialog
 _UI_SQLQUERYBUILDERDIALOG_NAME = SQL Query Builder
+SQLQueryBuilderDialogEditTabName=Edit
+SQLQueryBuilderDialogNoInput=SQLBuilder Dialog was not passed an input to open.
 SQLQueryBuilderDialogParseFailOnOpenAskUserTitle=SQL Query Builder
 SQLQueryBuilderDialogParseFailOnOpenAskUserMessage=If you continue, an empty SQL Statement will be created in the SQL Query Builder. Do you wish to continue?
+SQLQueryBuilderDialogResultsTabName=SQL Results
 
 
 # plugin.xml.  preference page extension point
