193793: Inconsistent preference pages

--- a/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/preference/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/src/org/eclipse/datatools/sqltools/plan/internal/preference/messages.properties
@@ -1,6 +1,6 @@
-ExecutionPlanPage.orientation.group.name=SQL Execution Plan View Orientation
+ExecutionPlanPage.orientation.group.name=SQL execution plan view orientation
 ExecutionPlanPage.vertical.orientation=&Vertical orientation
-ExecutionPlanPage.export.group=Export Encoding
+ExecutionPlanPage.export.group=Export encoding
 ExecutionPlanPage.default.enc=D&efault({0})
 ExecutionPlanPage.other.enc=O&ther:
 ExecutionPlanPage.horizontal.orientation=&Horizontal orientation
