--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -59,3 +59,4 @@ profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
 dbProfilePage_defaultPageMessage=Specify a JDBC Driver and Connection Details
 dbProfilePage_notInDesignSession=Unable to open a property page outside of an ODA design session.
 dbProfilePage_noCustomPage=Unable to find and open the database driver specific property page.
+preferencesPage_openDataAccessDescription=Set the preferences for individual Open Data Access data sources \nby using the pages under this node.
