[193793] Inconsistent DTP Preference Pages

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004, 2007 Actuate Corporation.
+# Copyright (c) 2004, 2008 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -21,9 +21,9 @@ wizard.title.selectColumn=Define Column Mapping
 wizard.title.defineColumnMapping=Create data set columns by selecting and adding items from the XML structure.\nEach added XML element or attribute is mapped to a data set column. 
 
 #preference
-designer.preview.preference.numberOfElementPassedToGetSchema=Number of elements accessed in XML Schema tree parsing.
+designer.preview.preference.numberOfElementPassedToGetSchema=Number of data elements to parse for XML schema:
 designer.preview.preference.numberOfElementPassedToGetSchema.errormessage=Please enter a number between 0 and {0}.
-designer.preview.preference.columnMappingPage.group.title=Column Mapping Page
+designer.preview.preference.columnMappingPage.group.title=Column Mapping
 
 #row mapping page messages
 xPathChoosePage.messages.elementSelection.label=XML Element Selection
