[226067] Removed compiler warnings on non-externalized strings

--- a/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/src/org/eclipse/datatools/enablement/oda/xml/i18n/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004, 2007 Actuate Corporation.
+# Copyright (c) 2004, 2008 Actuate Corporation.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -22,4 +22,7 @@ RelationInformation.InvalidDataTypeName=The provided data type name is invalid.
 RelationInformation.InvalidFilterDefinition=The filter definition is invalid. 
 DateUtil.ConvertFails=Convert to date fails. Source:
 dataTypes.typeNameInvalid=Data Type Name Invalid:
+dateFormatISO8601.inconvertibleValueError=Cannot convert the value of 
+exception.invalidArgument=Invalid argument type.
+exception.nullDataSourceContent=Data source content is null.
 ui.invalidXSDFile=The provided xsd file is invalid.
