[132958] Applied the Ecore ODA Patch 1 (95129) described in comment #13

--- a/plugins/org.eclipse.datatools.enablement.oda.ecore/src/org/eclipse/datatools/enablement/oda/ecore/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore/src/org/eclipse/datatools/enablement/oda/ecore/i18n/messages.properties
@@ -12,3 +12,6 @@
 #************************************************************************
 #
 # Exception messages for the ODA Ecore Driver
+dataTypes_typeNameInvalid=The type name {0} is not valid.
+query_alreadyClosed=The query is already closed.
+resultSet_alreadyClosed=The result set is already closed.
