CheckIn:Fix bug which can not save the changes in Row Mapping

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -39,6 +39,7 @@ xPathChoosePage.messages.xpathChange=Make sure the changed table mapping is comp
 xPathChoosePage.FileNameIcon=File Name Icon
 xPathChoosePage.XMLElementIcon=XML Element Icon
 xPathChoosePage.ColumnIcon=Column Icon
+xPathChoosePage.messages.btnAdd.tooltip=Use the selected node as XPath expression
 
 #sample xml data file page messages
 xmlDataSetSelectionPage.messages.lineofdata=lines of source data
