BZ225651 - Committing new usability changes to the main codeline

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -36,20 +36,37 @@ TemplateDescriptor.msg.driverTypeDescriptorCreationError = Problem encountered w
 
 DriverPreferences.label.availableDrivers = Driver de&finitions:
 DriverPreferences.button.addDriver = Add...
+DriverPreferences.DriverTypeFilter=Driver Type Filter:
+DriverPreferences.VendorFilter=Vendor Filter:
+DriverPreferences.NameColumn=Name
+DriverPreferences.DriverNameColumn=Driver Name
+DriverPreferences.VendorColumn=Vendor
+DriverPreferences.VersionColumn=Version
 DriverPreferences.button.editDriver = &Edit...
 DriverPreferences.button.removeDriver = &Remove
 DriverPreferences.button.copyDriver = &Copy
 DriverPreferences.title.removeMessage = Confirm Driver Removal
+DriverPreferences.DriverVersionColumn=Driver Version (if applicable)
 DriverPreferences.text.removeMessage = Are you sure you want to remove the driver {0} ?
+DriverPreferences.DriverVendorColumn=Driver Vendor (if Applicable)
 
 DriverDefinitionsDialog.title = Available Driver Definitions
+DriverDialog.DriverTypeFilter=Driver Type Filter:
+DriverDialog.VendorFilter=Vendor Filter:
+DriverDialog.DriverNameColumn=Driver Name
+DriverDialog.VendorColumn=Vendor
+DriverDialog.DialogMessage=Specify a driver template, then modify details in the fields below to provide a unique name, a list \nof required jars, and set any available and applicable property values.
+DriverDialog.Properties.Tab=Properties
 DriverDefinitionsDialog.message = Add, edit, or remove driver definitions to manage available driver definitions.
+DriverDialog.DriverVendorColumn=Driver Vendor (if Applicable)
 DriverDefinitionsDialog.windowTitle = Driver Definitions
 DriverDefinitionsDialog.label.properties = &Driver definitions:
 DriverDefinitionsDialog.button.addDriver = &Add...
 DriverDefinitionsDialog.button.editDriver = &Edit...
 DriverDefinitionsDialog.button.removeDriver = &Remove
 DriverDefinitionsDialog.button.copyDriver = &Copy
+DriverDialog.quickdriver.name=Quick {0}
+DriverDialog.NewDriver.title=New Driver Dialog
 
 DelimitedStringList.button.add = Add
 DelimitedStringList.button.up = Up
@@ -58,11 +75,16 @@ DelimitedStringList.button.remove = Remove
 DelimitedStringList.button.clear = Clear All
 
 DriverListCombo.button.browse = ...
+DriverListCombo.button.newdriver=New Driver Definition
+DriverDialog.DriverVersionColumn=Driver Version (if applicable)
+DriverListCombo.button.generic=Fast Driver (Generic JDBC) Definition
 
 DriverValidator.msg.missing_required_property = Required property in driver definition missing value: {0}.
 DriverValidator.msg.jarfile_not_found = Unable to locate JAR/zip in file system as specified by the driver definition: {0}.
 DriverInstance.error.invalidClassPath=Invalid driver class path.
 DriverValidator.msg.empty_jar_list = Driver files not specified in driver definition.
+DriverDialog.EditDriverDialogTitle=Edit Driver Dialog
+DriverDialog.EditDriver.message=Modify details in the fields below to provide a unique name, a list of required jars, and set any \navailable and applicable property values.
 DriverValidator.msg.empty_name = A driver name must not be an empty string.
 
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
@@ -100,3 +122,8 @@ EditDriverDialog.msg.updateAllJarsToSamePath.message = Do you want to update the
 PropertiesLabelProvider.connectionProps=Connection Properties
 
 DelimitedStringList.ValidationMsg.NoCommas = Commas not allowed within parameter values.
+DriverDialog.AllFilter=All
+DriverDialog.NameColumn=Name
+DriverDialog.Name.Type.Tab=Name/Type
+DriverDialog.JarList.Tab=Jar List
+DriverDialog.Version=Version
