CheckIn: Fix Bugzilla Bug 226434 XML data set dialog enhancement

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -49,6 +49,7 @@ xmlDataSetSelectionPage.warning.errorReadXMLFile=Error reading XML data from fil
 button.refresh=Refresh
 menu.menuItem.removeAll=Remove All
 menu.menuItem.remove=Remove
+menu.button.add=&Add...
 menu.button.edit=&Edit...
 menu.button.remove=&Remove
 menu.button.up=&Up
