CheckIn: Fix Bugzilla Bug 226415 Should provide a button to tick off all the parameters in web service data set dialog

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -40,6 +40,8 @@ operationPage.label.document=Documentation
 
 # SoapParametersPage
 soapParametersPage.message.default=Enter the parameters of chosen WSDL operation
+soapParametersPage.button.selectAll=&Select All
+soapParametersPage.button.deselectAll=&Deselect All
 
 # SoapRequestPage
 soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text
