[BZ225651] Fixes to connectivity.ui, sybase,ase, and postgres

--- a/plugins/org.eclipse.datatools.enablement.sybase.ase/src/org/eclipse/datatools/enablement/ase/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase/src/org/eclipse/datatools/enablement/ase/messages.properties
@@ -1,5 +1,5 @@
 # package: org.eclipse.datatools.enablement.ase
-NewConnectionProfileWizard.title = New Sybase ASE Connection Profile
+NewConnectionProfileWizard.ASE.title = New Sybase ASE Connection Profile
 
 JDBCPropertyWizardPage.PingButton=Test connection
 JDBCPropertyWizardPage.url.label=URL
