[BZ227605] Fixes for various issues with updated usability code

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -51,8 +51,8 @@ DriverPreferences.text.removeMessage = Are you sure you want to remove the drive
 DriverPreferences.DriverVendorColumn=Driver Vendor (if Applicable)
 
 DriverDefinitionsDialog.title = Available Driver Definitions
-DriverDialog.DriverTypeFilter=Driver Type Filter:
-DriverDialog.VendorFilter=Vendor Filter:
+DriverDialog.DriverTypeFilter=&Driver Type Filter:
+DriverDialog.VendorFilter=&Vendor Filter:
 DriverDialog.DriverNameColumn=Driver Name
 DriverDialog.VendorColumn=Vendor
 DriverDialog.DialogMessage=Specify a driver template, then modify details in the fields below to provide a unique name, a list \nof required jars, and set any available and applicable property values.
@@ -76,6 +76,7 @@ DelimitedStringList.button.clear = Clear All
 
 DriverListCombo.button.browse = ...
 DriverListCombo.button.newdriver=New Driver Definition
+DriverListCombo.EditDriverButton.tooltip=Edit Driver Definition
 DriverDialog.DriverVersionColumn=Driver Version (if applicable)
 DriverListCombo.button.generic=Fast Driver (Generic JDBC) Definition
 
@@ -91,7 +92,7 @@ DriverValidator.msg.no_driver_selected = Define and select a driver from the dro
 DriverInstance.error.jarListNotDefined=Invalid driver definition; JAR list not defined.
 
 NewDriverDialog.label.availableTemplates = &Available driver templates:
-NewDriverDialog.label.driverNameText = &Driver name:
+NewDriverDialog.label.driverNameText = Driver &name:
 NewDriverDialog.button.edit_immediately = &Edit new driver definition immediately
 NewDriverDialog.title = Specify a Driver Template and Definition Name
 NewDriverDialog.message = Select an available driver template and provide a name for the new driver definition.
