[203834]  Connectivity Filtering Support should handle multiple predicates

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -143,6 +143,11 @@ DATATOOLS.PROJECT.UI.BOOKMARK.MESSAGE=Enter Bookmark Name:
 DATATOOLS.PROJECT.UI.INACTIVE_RELATIONSHIP = Implicit
 
 #
+## Filtering Decoration
+#
+DATATOOLS.SERVER.UI.EXPLORER.FILTER_DECORATION = [Filtered]
+
+#
 ## Catalog Util
 #
 DATATOOLS.CORE.UI.LOADING=Loading
@@ -208,6 +213,12 @@ _UI_MESSAGE_SELECTION_REQUIRED = Please select at least one item.
 _UI_SP_FILTER_PAGE_TITLE = Stored Procedure Filter Properties
 _UI_TABLE_FILTER_PAGE_TITLE = Table Filter Properties
 _UI_SCHEMA_FILTER_PAGE_TITLE = Schema Filter Properties
+_UI_TOOLTIP_NEW = New
+_UI_TOOLTIP_DELETE = Delete
+_UI_RADIO_BUTTON_AND = Meet all conditions
+_UI_RADIO_BUTTON_OR = Meet any condition
+_UI_COMBO_PREDICATE = Predicate
+_UI_TEXT_VALUE = Value
 
 #
 ## Actions for Schema Management
