NEW - bug 231013: driver definition wizards have unfinished descriptions https://bugs.eclipse.org/bugs/show_bug.cgi?id=231013

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -55,7 +55,7 @@ DriverDialog.DriverTypeFilter=&Driver Type Filter:
 DriverDialog.VendorFilter=&Vendor Filter:
 DriverDialog.DriverNameColumn=Driver Name
 DriverDialog.VendorColumn=Vendor
-DriverDialog.DialogMessage=Specify a driver template, then modify details in the fields below to provide a unique name, a list \nof required jars, and set any available and applicable property values.
+DriverDialog.DialogMessage=Specify a driver template, then modify details in the fields below to provide a unique name, a list of required jars, and set any available and applicable property values.
 DriverDialog.Properties.Tab=Properties
 DriverDefinitionsDialog.message = Add, edit, or remove driver definitions to manage available driver definitions.
 DriverDialog.DriverVendorColumn=Driver Vendor (if Applicable)
@@ -85,7 +85,7 @@ DriverValidator.msg.jarfile_not_found = Unable to locate JAR/zip in file system 
 DriverInstance.error.invalidClassPath=Invalid driver class path.
 DriverValidator.msg.empty_jar_list = Driver files not specified in driver definition.
 DriverDialog.EditDriverDialogTitle=Edit Driver Dialog
-DriverDialog.EditDriver.message=Modify details in the fields below to provide a unique name, a list of required jars, and set any \navailable and applicable property values.
+DriverDialog.EditDriver.message=Modify details in the fields below to provide a unique name, a list of required jars, and set any available and applicable property values.
 DriverValidator.msg.empty_name = A driver name must not be an empty string.
 
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
