--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/profile/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/profile/messages.properties
@@ -6,4 +6,5 @@ ProfileUtil_error_not_connected=The connection profile : {0} is not connected ye
 
 ProfileUtil_error_getdriver=Driver definition not specified for {0}.
 ProfileUtil_error_wrong_database_name=Wrong database returned {0} from connection profile {1}. Expected name is {2}
+ProfileUtil_error_no_managed_connection=Failed to get managed connection for connection profile {0}
 
